NIFI-12061: allow using AWS Secrets Manager without ListSecrets permission